syntax = "proto3";
package stream;

message StablecoinPrice {
    uint64 price = 1;
    uint32 scale = 2;
    uint64 timestamp = 3;
    string fa_address = 4;
    uint32 decimals = 5;
}

message PriceRequest {
    string fa_address = 1;
}

service StreamService {
    rpc WhiteListPriceStream(PriceRequest) returns (stream StablecoinPrice);
    rpc FAPriceStream(PriceRequest) returns (stream StablecoinPrice);
}


